--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ input {
     font-family: "mont";
     font-size: 16px;
     font-weight: 300;
+    border-radius: 0;
 }
 
 .input-all {
@@ -2399,10 +2400,18 @@ footer h3 {
         margin-bottom: 80px;
     }
 
+    .about-block-img {
+        gap: 5px;
+    }
+
     .podpiska {
         gap: 35px;
         padding: 0 20px;
         margin-bottom: 50px;
+    }
+
+    .about-block-no {
+        gap: 5px;
     }
 
     .podpiska-title h3 {
